src/objects/TTend__c.object
<CustomObject>
    <description>*** Account Payment type</description>
    <fields>
        <fullName>AccMstDPNameCal__c</fullName>
        <formula>BLANKVALUE(PayProductRef__r.DPChange__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$会計DP名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstDPName__c</fullName>
        <label>会計DP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstGPNameCal__c</fullName>
        <formula>BLANKVALUE(PayProductRef__r.GPChange__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$会計GP名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstGPName__c</fullName>
        <label>会計GP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstOPNameCal__c</fullName>
        <formula>BLANKVALUE(PayProductRef__r.OP__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$会計OP名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccMstOPName__c</fullName>
        <label>会計OP名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArTranId__c</fullName>
        <label>会計明細（前受金）ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardTypeLst__c</fullName>
        <label>カード種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>China UnionPay</fullName>
                </value>
                <value>
                    <fullName>Diners Club International</fullName>
                </value>
                <value>
                    <fullName>Discover Card</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>UATP</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearDateTime__c</fullName>
        <label>消込日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClearFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>消込フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearLog__c</fullName>
        <label>消込ログ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearName__c</fullName>
        <label>消込者</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearPayment__c</fullName>
        <label>消込済金額</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CouponTypeLst__c</fullName>
        <label>金券種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>楽天クーポン</fullName>
                </value>
                <value>
                    <fullName>JTBクーポン</fullName>
                </value>
                <value>
                    <fullName>H.I.Sクーポン</fullName>
                </value>
                <value>
                    <fullName>楽天ポイント</fullName>
                </value>
                <value>
                    <fullName>JTBポイント</fullName>
                </value>
                <value>
                    <fullName>H.I.Sポイント</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>値引／割引種別</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>対象ＰＬＵコード</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field14__c</fullName>
        <label>値引／割引ステータス</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNoShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>請求書に該当商品情報を明細に非表示する</description>
        <label>請求書非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>RelAccount__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadInfo__c</fullName>
        <formula>IF(Field1__r.Relreserve__c != null, CASESAFEID(Field1__r.Relreserve__r.LeadIndexRef__c) &amp; &quot;:&quot; &amp;Field1__r.Relreserve__r.LeadIndexSubId__c&amp; &quot;:&quot; &amp; TEXT(Field1__r.Relreserve__r.RoomGroupNo__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約連泊情報</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutSideAccount__c</fullName>
        <formula>if ( Field35__c = &quot;00&quot; &amp;&amp;  Field4__c = &quot;1&quot; &amp;&amp;  Field5__c =&quot;1&quot; &amp;&amp;  Field1__r.Field40__c  =&quot;&quot; &amp;&amp;  (Field29__c  &lt;&gt; 0 || AND(  $Setup.CommDefine__c.BillInputSwitchCode__c = &apos;2&apos; , Field28__c &lt;&gt; 0 ) ), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$集計対象外</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POSNo__c</fullName>
        <label>POSNo.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayProductName__c</fullName>
        <label>会計商品名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayProductRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>支払商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>会計支払 (支払商品)</relationshipLabel>
        <relationshipName>TTendPayProductRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentSummaryCal__c</fullName>
        <formula>IF( Field29__c == 0 &amp;&amp; Field28__c &lt;&gt; 0 ,  Field28__c, Field29__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$$支払　金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentSummaryNoTaxCal__c</fullName>
        <formula>PaymentSummaryCal__c- Taxfee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$$支払金額(税抜き)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>該当明細は既に印刷済がどうか識別フラグ</inlineHelpText>
        <label>印刷済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiptDt__c</fullName>
        <label>入金日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelAccount__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>会計支払</relationshipLabel>
        <relationshipName>PaymentAccountYPMt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReservedTypeCal__c</fullName>
        <formula>TEXT(Field1__r.Relreserve__r.ReservedType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$予約タイプ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReservedType__c</fullName>
        <label>予約タイプ</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNameCal__c</fullName>
        <formula>BLANKVALUE(Field1__r.Relreserve__r.Rroom__r.Name, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$お部屋名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>お部屋名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowNo__c</fullName>
        <label>RowNo.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopCodeCal__c</fullName>
        <formula>Field1__r.ShopCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>店舗コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SplitGroupNo__c</fullName>
        <label>分割NO</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taishou__c</fullName>
        <formula>if (   OutSideAccount__c  = 1, 
IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;A&quot;, &quot;対象&quot;), 
IF(Field35__c = &quot;30&quot;, IMAGE(&quot;/resource/&quot; &amp; $Setup.CommDefine__c.AppNS__c &amp; &quot;VOID&quot;, &quot;VOID対象&quot;), 
&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxfee__c</fullName>
        <formula>if (  Field4__c  = &quot;2&quot;, 0-VALUE( Field25__c ),VALUE( Field25__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$メディア毎消費税額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TempSaveExtInfo__c</fullName>
        <description>会計支払情報に対して、画面に入力の単価と数量は該当項目に一時格納する
書式→単価:数量</description>
        <label>単価と数量連結格納</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomNameCal__c</fullName>
        <formula>BLANKVALUE(Field1__r.Relreserve__r.refTypeOfRooms__r.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$部屋タイプ名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfRoomName__c</fullName>
        <label>部屋タイプ名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseDateCal__c</fullName>
        <formula>RelAccount__r.Salesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UseDate__c</fullName>
        <label>利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>noneaccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>集計対象外</label>
        <type>Checkbox</type>
    </fields>
    <label>会計支払</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>会計支払TranR#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>